styles.css
body {
    margin: 0;
}

* {
    box-sizing: border-box;
    /* https://stackoverflow.com/questions/11289166/chrome-on-android-resizes-font */
    max-height: 999999px;
}

ul {
    margin: 0;
    padding: 0;
}

.page {
    display: flex;
    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
    position: relative;
}

.container {
    display: flex;
    font-size: 1em;
    margin: auto;
    max-width: 1366px;
}

@media screen and (max-width: 767px) {
    .container {
        font-size: 0.8em;
    }
}

@media print {
    .no-print {
        display: none !important;
    }
}


/* sidebar */

.sidebar {
    width: 35%;
    background: #404040;
    min-height: 100vh;
    color: #BDBBBA;
    text-align: right;
    padding: 20px 30px 20px;
    display: flex;
    flex-direction: column;
    padding-bottom: 100px;
}

.sidebar__title {
    color: #BE913D;
    position: relative;
}

.sidebar__title-hint {
    color: #949494;
    font-size: 0.87em;
    text-transform: initial;
    position: absolute;
    top: 2px;
    right: 0;
    letter-spacing: normal;
}

@media screen and (max-width: 1199px) {
    .sidebar__title-hint {
        top: 20px;
        right: 50%;
        transform: translateX(50%);
    }
}

.sidebar__section {
    margin-top: 120px;
}

/* horizontal-line */
.line {
    border-bottom: 3px solid #BE913D;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 100vw;
    max-width: 1366px;
    z-index: 1;
}

.line_up {
    top: 180px;
}

.line_down {
    bottom: 40px;
}

@media screen and (max-width: 767px) {
    .sidebar {
        max-width: 30%;
        padding: 10px 12px 10px;
    }

    .sidebar__section {
        margin-top: 80px;
    }

    .line_up {
        top: 140px;
    }
}



/* contacts */
.contacts {
    display: flex;
    flex-direction: column;
}

.contacts__row {
    display: flex;
    justify-content: flex-end;
    line-height: 1.9;
    text-decoration: none;
    color: #BDBBBA;
}

.contacts__row:hover {
    cursor: pointer;
    color: #BE913D;
}

.contacts__icon {
    margin-left: 20px;
    width: 20px;
    height: 25px;
}

.contacts__row .contacts__icon {
    display: block;
}

.contacts__row:hover .contacts__icon {
    display: none;
}

.contacts__row .contacts__icon.contacts__icon_active {
    display: none;
}

.contacts__row:hover .contacts__icon.contacts__icon_active {
    display: block;
}

@media screen and (max-width: 767px) {
    .contacts__icon {
        margin-left: 10px;
    }
}


.marked {
    font-weight: 700;
}


/* personal-info */

.personal-info-row {
    line-height: 1.5;
}


/* education */

.education__section:not(:last-child) {
    margin-bottom: 50px;
}

.education-row {
    line-height: 1.5;
}


/* skills */

.skills__list {
    display: flex;
    flex-wrap: wrap;
}

.skills__tag {
    border: 1px solid #404040;
    color: #404040;
    border-radius: 4px;
    padding: 4px 10px;;
    margin-bottom: 10px;
    margin-right: 10px;
}


/* additional skills */

.additional-skills__row {
    line-height: 1.5
}


/* languages */

.languages__row {
    display: flex;
    justify-content: flex-end;
    line-height: 2;
}

.language__name {
    margin-right: 30px;
}

.language__skill {
    display: flex;
    align-items: center;
}

.language__dot {
    width: 10px;
    height: 10px;
    border-radius: 2px;
    background: #BDBBBA;
}

.language__dot_active {
    background: #BE913D;
}

.language__dot:not(:last-child) {
    margin-right: 10px;
}


/* certificates */

.certificates-row {
    line-height: 1.9;
}

.certificates__link {
    text-decoration: none;
    color: #BDBBBA;
}

.certificates__link:hover {
    cursor: pointer;
    color: #BE913D;
}


/* base */

.base {
    position: relative;
    padding: 0 20px 100px;
}

.base__section:not(:last-child) {
    margin-bottom: 80px;
}

@media screen and (max-width: 767px) {
    .base__section:not(:last-child) {
        margin-bottom: 60px;
    }
}


/* head */

.head {
    padding: 20px 0;
    position: relative;
    background: #404040;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-size: 3em;
}

.head__name {
    color: #FFFFFF;
}

.head__surname {
    color: #BE913D;
}

.head__photo {
    width: 100px;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

.position {
    z-index: 2;
    position: absolute;
    margin: auto;
    background: #FFFFFF;
    top: 180px;
    letter-spacing: 2px;
    padding: 0 10px;
    left: 50%;
    transform: translateX(-50%) translateY(-10px);
}

@media screen and (max-width: 767px) {
    .head {
        font-size: 2em;
    }

    .position {
        top: 140px;
    }

    .head__photo {
        width: 60px;
    }
}


.career {
    padding-top: 100px;
    line-height: 1.33;
}


/* subtitle */

.subtitle {
    padding-bottom: 20px;
    display: flex;
    justify-content: center;
    text-transform: uppercase;
    letter-spacing: 3px;
}

.subtitle__text {
    padding: 0 5px;
}

.subtitle__text_bordered {
    border-bottom: 3px solid #BE913D;
}


/* experience */

.experience__section:not(:last-child) {
    margin-bottom: 50px;
}


/* job */

.job {
    display: flex;
}

.job__time {
    flex-basis: 150px;
    flex-grow: 0;
    flex-shrink: 0;
}

.job-info {
    flex-direction: column;
    flex-grow: 1;
}

.job__row {
    display: flex;
    justify-content: space-between;
}

.job__position {
    font-size: 0.87em;
    color: #949494;
}

.job__description {
    margin-top: 10px;
    margin-bottom: 10px;
    padding-left: 20px;
}

.job__description-item {
    line-height: 1.5;
}

.job__description-item-link {
    opacity: 0.5;
    cursor: pointer;
    text-decoration: none;
    color: #000000;
}

.job__description-item-link:hover {
    opacity: 1;
    color: #BE913D;
}

.job__key-technologies {
    display: flex;
}

.job__key-technologies-subtitle {
    font-weight: 700;
    margin-right: 0.5em;
    flex-shrink: 0;
}

@media screen and (max-width: 767px) {
    .job {
        flex-direction: column;
    }

    .job__time {
        flex-basis: initial;
        margin-bottom: 5px;
    }

    .job__key-technologies {
        flex-direction: column;
    }

    .job__key-technologies-subtitle {
        margin-right: 0;
        margin-bottom: 5px;
    }
}

.job__link {
    padding-top: 5px;
    opacity: 0.5;
    cursor: pointer;
}

.job__link:hover {
    opacity: 1;
}

.job__link-anchor {
    text-decoration: none;
    color: #000000;
}

.job__link-anchor:hover {
    text-decoration: none;
    color: #BE913D;
}

